<resources>
    <string name="app_name">EbayAutoDisplay</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ebay_libarary_project">Ebay Search Library</string>
    <string name="by_location">By Location</string>
    <string name="categoryid_example_9355">CategoryID (example:9355)</string>
    <string name="key_word">Key Word</string>
    <string name="search">SEARCH</string>
    <string name="icon">Icon</string>
</resources>